# utf-typecase

./: .gitignore  CONTRIBUTING.md  LICENSE  OPENING_PORTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh  setup.sh  shell.nix  test.sh
.github/: labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  feature.md  general_issue.md  idea.md  question.md  refactor.md  support.md  testing.md
src/utf_typecase/: server.py
src/utf_typecase/cli/: main.py
tests/: conftest.py  test_cli.py
utf_typecase/cli/: main.py
utf_typecase/tests/: conftest.py
