[project]
name = "utf-typecase"
version = "0.2.0"
description = "Remote Unicode keyboard: select UTF characters in a browser and insert them on another device."
authors = [{name="AlexanderGoebel", email="lollybyte.git@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = ["click", "click-completion", "click-pwsh", "flask", "requests", "pyautogui", "pyperclip"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
utf-typecase = "utf_typecase.cli.main:main"

[tool.setuptools.package-data]
"utf_typecase" = ["completions/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
